--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "url": "git+https://github.com/IEBH/deepstream.git"
   },
   "scripts": {
+    "dev": "nodemon --watch lib --exec 'npm run serve'",
+    "serve": "node app.js",
     "test": "mocha"
   },
   "keywords": [
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@deepstream/client": "^5.2.4",
     "chai": "^4.3.4",
-    "mocha": "^9.1.0"
+    "mocha": "^9.1.0",
+    "nodemon": "^2.0.19"
   }
 }
